<resources>
    <string name="app_name">RSI</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Settings strig -->
    <string name="save">Spara</string>
    <string name="account">Mitt konto</string>
    <string name="accountKey">RSI-Nykel</string>
    <string name="notification">Notiser</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_notifications">Aktivera notiser</string>
    <string name="title_activity_login">Sign in</string>

    <string name="logo">Logo</string>
    <string name="area">Bevakade områden</string>
    <string name="settings">Inställningar</string>
    <string name="search">Sök efter område</string>

    <string name="welcome">Välkommen till RSI</string>
    <string name="driven_by">En produkt levererad av Klimator</string>
    <string name="no_area">Du bevakar inget område ännu. Sök efter ett nytt område att bevaka.</string>
    <string name="in_beta_start">Notera att detta är en betaversion och att fel och buggar kan förekomma.</string>
    <string name="send_feedback">Vi tar gärna emot feedback på mailadressen nedan ifall du har förslag på förbättringar eller upptäcker några fel.</string>
    <string name="feedback_mail">digital.penguin.solutions@gmail.com</string>


    <string name="more">Mer</string>
    <string name="web">Mer detailjerad data</string>

    <string name="loading">Laddar data...</string>

    <string name="road">Väglag</string>
    <string name="temp">Temperatur</string>
    <string name="map">Karta</string>


    <!-- Strings related to login -->
    <string name="error_invalid_email">RSI-nyckel finns inte</string>
    <string name="error_field_required">Det här fältet är obligatoriskt</string>
    <string name="log_in">Logga in</string>
    <string name="log_out">Logga ut</string>
    <string name="submit_rsi_Key">Ange din RSI-nyckel</string>
    <string name="change_rsi_key">Ändra nyckel</string>
    <string name="rsi_Key">RSI-Nyckel</string>
    <string name="fetch_latest">Hämta senaste prognos</string>
    <string name="notify_if">Notifiera mig om:</string>
</resources>
