<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#efefef"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/road"
            android:layout_width="0dp"
            android:background="#00000000"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_road"
            android:gravity="center"
            android:text="@string/road"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/temp"
            android:layout_width="0dp"
            android:background="#00000000"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_temperature"
            android:gravity="center"
            android:text="@string/temp"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/webBtn"
            android:layout_width="0dp"
            android:background="#00000000"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:autoLink="web"
            android:clickable="true"
            android:drawableTop="@drawable/ic_map"
            android:focusable="true"
            android:gravity="center"
            android:linksClickable="true"
            android:onClick="launchRSI"
            android:text="@string/map"
            android:textColor="@color/colorBlack" />

    </LinearLayout>


</LinearLayout>

